--- a/index.html
+++ b/index.html
@@ -187,14 +187,14 @@
 				<div class="name">吴嘉双</div>
 				<ul class="intro-con">
                 	<li>
-						<a href="index2.html#fifth">联系方式</a>
+						<a href="index.html#fifth">联系方式</a>
 						<div class="bor-left bor1"></div>
 						<div class="bor-top bor1"></div>
 						<div class="bor-right bor1"></div>
 						<div class="bor-bottom bor1"></div>
 					</li>
 					<li>
-						<a href="index2.html#third">作品演示</a>
+						<a href="index.html#third">作品演示</a>
 						<div class="bor-left bor2"></div>
 						<div class="bor-top bor2"></div>
 						<div class="bor-right bor2"></div>
